# brickochet

./: Cargo.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yaml
src/: main.rs  main_menu.rs  scene.rs  state.rs  states.rs
src/ball/: components.rs  systems.rs
src/ball/tests/: test_systems.rs
src/brick/: components.rs  systems.rs
src/components/: ball.rs  mod.rs  paddle.rs  physics.rs  playfield.rs  rendering.rs
src/gameplay/: mod.rs
src/gameplay/ball/: components.rs
src/gameplay/brick/: assets.rs  components.rs  mod.rs  systems.rs
src/gameplay/paddle/: components.rs  systems.rs
src/gameplay/player/: systems.rs
src/gameplay/playfield/: components.rs  mod.rs  resources.rs  systems.rs
src/health/: components.rs  messages.rs  mod.rs  systems.rs
src/health/tests/: test_systems.rs
src/input/: mod.rs  systems.rs
src/input/tests/: test_systems.rs
src/main_menu/: components.rs  mod.rs  systems.rs
src/main_menu/tests/: mod.rs  test_systems.rs
src/paddle/: components.rs  systems.rs
src/paddle/tests/: test_systems.rs
src/physics/: components.rs  math.rs  messages.rs  mod.rs  systems.rs
src/physics/tests/: mod.rs  test_math.rs  test_systems.rs
src/playfield/: components.rs  resources.rs  systems.rs
src/playfield/tests/: test_systems.rs
src/rendering/: components.rs  messages.rs  mod.rs  systems.rs
src/resources/: input.rs  playfield.rs
src/scene/: mod.rs
src/systems/: ball.rs  input.rs  mod.rs  paddle.rs  physics.rs  playfield.rs  rendering.rs  scene.rs
src/test_utils/: assertions.rs
(+4 files in other folders)
