[package]
name = "brickochet"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
bevy-inspector-egui = "0.35.0"
rand = "0.9.2"

[dev-dependencies]
test-case = "3.3.1"

# No optimization so we can use debugger
[profile.dev]
opt-level = 0

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
